--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,13 @@
     transform: rotate(360deg);
   }
 }
+
+.pepe td{
+  width:120px;
+  height:120px;
+  border:5px solid black;
+  margin:0px;
+  padding:0px;
+  font-size:40px;
+  font-weight: 900
+}
